# hpc-convolution

./: .gitignore  CMakeLists.txt  README.md  compile.sh  run.sh  setup.sh
include/: auxillary.cuh  auxillary.hpp  global_cuda.hpp  globalmem.cuh  matrix.hpp  pnm.hpp  serial.hpp  sharedmem.cuh
resources/: four.pgm  ref_rotated.pgm
src/: auxillary.cpp  auxillary.cu  global_cuda.cpp  global_cuda.cu  globalmem.cu  main.cpp  main.cu  matrix.cpp  serial.cpp  sharedmem.cu
